fix(prism): make line hightlights more visible

--- a/static/css/prism.css
+++ b/static/css/prism.css
@@ -112,10 +112,11 @@ pre[data-line] {
     padding: inherit 0;
     margin-top: 1em;
     background: hsla(24, 20%, 50%, 0.08);
-    background: linear-gradient(to right, hsla(24, 20%, 50%, 0.1) 70%, hsla(24, 20%, 50%, 0));
+    background: linear-gradient(to right, hsl(23.5, 20%, 50%) 70%, hsla(24, 20%, 50%, 0));
     pointer-events: none;
     line-height: inherit;
     white-space: pre;
+    opacity: 30%;
 }
 @media print {
     .line-highlight {
